--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.1",
+    "@cypress/webpack-dev-server": "^4.0.2",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
